# Automacao-de-Processo

./: .gitignore  Automacao de Processo.ipynb  README.md  pyproject.toml
Backup Arquivos Lojas/: 26-12-2019_Ranking Anual.xlsx  26-12-2019_Ranking Dia.xlsx
Backup Arquivos Lojas/Bourbon Shopping SP/: Vendas Bourbon Shopping SP 26-12-2019.xlsx
Backup Arquivos Lojas/Center Shopping Uberlândia/: Vendas Center Shopping Uberlândia 26-12-2019.xlsx
Backup Arquivos Lojas/Iguatemi Campinas/: Vendas Iguatemi Campinas 26-12-2019.xlsx
Backup Arquivos Lojas/Iguatemi Esplanada/: Vendas Iguatemi Esplanada 26-12-2019.xlsx
Backup Arquivos Lojas/Norte Shopping/: Vendas Norte Shopping 26-12-2019.xlsx
Backup Arquivos Lojas/Novo Shopping Ribeirão Preto/: Vendas Novo Shopping Ribeirão Preto 26-12-2019.xlsx
Backup Arquivos Lojas/Palladium Shopping Curitiba/: Vendas Palladium Shopping Curitiba 26-12-2019.xlsx
Backup Arquivos Lojas/Parque Dom Pedro Shopping/: Vendas Parque Dom Pedro Shopping 26-12-2019.xlsx
Backup Arquivos Lojas/Passei das Águas Shopping/: Vendas Passei das Águas Shopping 26-12-2019.xlsx
Backup Arquivos Lojas/Ribeirão Shopping/: Vendas Ribeirão Shopping 26-12-2019.xlsx
Backup Arquivos Lojas/Rio Mar Recife/: Vendas Rio Mar Recife 26-12-2019.xlsx
Backup Arquivos Lojas/Rio Mar Shopping Fortaleza/: Vendas Rio Mar Shopping Fortaleza 26-12-2019.xlsx
Backup Arquivos Lojas/Salvador Shopping/: Vendas Salvador Shopping 26-12-2019.xlsx
Backup Arquivos Lojas/Shopping Barra/: Vendas Shopping Barra 26-12-2019.xlsx
Bases de Dados/: Emails.xlsx
(+11 files in other folders)
