[project]
name = "process-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Sousa do Carmo",email = "161891055+FernanSoCar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pywin32 (>=310,<311)"
]

[tool.poetry]
packages = [{include = "process_automation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
